// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterMountOrUnMount should append new children 1`] = `
Object {
  "childrenWillMount": true,
  "childrenWillUnmount": true,
  "mappedChildren": Array [
    Object {
      "key": 0,
      "willMount": true,
    },
    Object {
      "key": 1,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 2,
      "willUnmount": true,
    },
    Object {
      "key": 4,
      "willMount": true,
    },
    Object {
      "key": 6,
      "willMount": true,
    },
    Object {
      "key": 3,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 5,
      "willMount": true,
    },
  ],
}
`;

exports[`filterMountOrUnMount should mark child is about to be unMount 1`] = `
Object {
  "childrenWillMount": false,
  "childrenWillUnmount": true,
  "mappedChildren": Array [
    Object {
      "key": 1,
      "willMount": false,
      "willUnmount": false,
    },
    Object {
      "key": 2,
      "willUnmount": true,
    },
  ],
}
`;
